--- a/src/components/organisms/strategia-marketingowa/accordion/yes.css
+++ b/src/components/organisms/strategia-marketingowa/accordion/yes.css
@@ -11,7 +11,7 @@
     border-radius: 100%;
 }
 .accordion-item {
-    border-bottom: 0.5px solid #b9b9b9;
+    /* border-bottom: 0.5px solid #b9b9b9; */
     padding: 15px 20px 15px 20px;
 }
 .accordion-title {
