--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -1,4 +1,3 @@
-
 .select-input {
   width: 75%;
   margin: 0 auto;
@@ -121,7 +120,6 @@
   width: 90%;
   padding: 12px;
   outline: none;
-  
 }
 
 /* component two */
@@ -278,32 +276,50 @@ input[type="range"]:focus::-webkit-slider-thumb {
 }
 
 @media screen and (max-width: 1024px) {
-  .contact{
+  .contact {
     display: none;
   }
 }
 @media screen and (max-width: 767px) {
-  .contact{
+  .contact {
     display: none;
   }
   .componentThree_input-container {
     padding: 20px 0px;
   }
-  .componentThree_input-container input{
+  .componentThree_input-container input {
     width: 95%;
   }
   .select-input {
     width: 95%;
     margin: 0 auto;
+  }
+  .Modal {
+    width: 80%;
+    max-width: 100%;
+    padding: 30px 20px;
+  }
+  .Modal .close {
+    top: -32px;
+    right: -28px;
+    font-size: 30px;
+  }
 }
-.Modal {
-  width: 80%;
-  max-width: 100%;
-  padding: 30px 20px;
+
+/* new styles */
+.red-title {
+  color: #d21e00;
+  animation: scaleUp 0.5s ease forwards;
 }
-.Modal .close {
-  top: -32px;
-  right: -28px;
-  font-size: 30px;
-}
+
+@keyframes scaleUp {
+  0% {
+    font-size: 20px;
+  }
+  50% {
+    font-size: 24px;
+  }
+  100% {
+    font-size: 20px;
+  }
 }
