--- a/src/components/organisms/tresci-sprzedazowe/tresci.css
+++ b/src/components/organisms/tresci-sprzedazowe/tresci.css
@@ -1,6 +1,7 @@
 .copywriter-page .copywriter-form-div {
     text-align: center;
 }
+
 .names-container-form:not(.names-container-form-btn) {
     margin-bottom: 80px;
     margin-top: 20px;
@@ -9,6 +10,7 @@
 .names-container-form:not(.names-container-form-btn) {
     margin-top: 130px;
 }
+
 .names-container-form {
     background-color: #fff;
     position: relative;
@@ -17,12 +19,15 @@
     margin: 0 auto;
     width: 590px;
 }
+
 .form-container {
     height: 100%;
 }
+
 .contact-form-2020 {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 .contact-form-2020 .header-text {
     font-size: 30px;
     line-height: 34px;
@@ -33,26 +38,34 @@
     text-align: left;
     margin-bottom: 45px;
 }
+
 .texts-green-color {
     color: #438d07;
 }
+
 .texts-green-bold {
     font-weight: 900;
 }
+
 .contact-input {
     width: calc((100% / 3) - 20px);
     float: left;
     position: relative;
 }
+
 .input-parent-new-form {
     color: #919191;
 }
+
 .contact-input2 {
     margin-right: 30px;
 }
-.contact-inputs input, contact-inputs textarea {
+
+.contact-inputs input,
+contact-inputs textarea {
     caret-color: #438d07;
 }
+
 .input-parent-new-form .prog-bar-bg {
     height: 1px;
     background: #a4a4a4;
@@ -68,12 +81,15 @@
     background: #e0e0e0;
     z-index: 5;
 }
-.input-parent-new-form input, .input-parent-new-form textarea {
+
+.input-parent-new-form input,
+.input-parent-new-form textarea {
     border-top: 2px solid #a4a4a4;
     border-right: 2px solid #a4a4a4;
     border-left: 2px solid #a4a4a4;
     border-bottom: 2px solid #a4a4a4;
 }
+
 .input-parent-new-form .input-placeholder {
     position: absolute;
     pointer-events: none;
@@ -86,12 +102,15 @@
     padding: 8px 0 5px 8px;
     z-index: 2;
 }
-.contact-input input, .contact-input textarea {
+
+.contact-input input,
+.contact-input textarea {
     /* border: transparent; */
     padding: 8px;
     padding-right: 32px;
     width: 100%;
 }
+
 .contact-inputs {
     margin-bottom: 30px;
 }
@@ -99,16 +118,19 @@
 .contact-input-textarea {
     width: 100%;
 }
+
 .contact-input textarea {
     height: 40px;
     padding: 10px 15px;
 }
+
 .contact-submit-button {
     position: relative;
     width: 100%;
     height: 66px;
     margin-top: 15px;
 }
+
 .contact-form-btn {
     width: calc(100% - 80px);
     background: #438d07;
@@ -123,6 +145,7 @@
     left: 0;
     z-index: 10;
 }
+
 .contact-form-btn-bg {
     width: calc(100% - 80px);
     background: #31600b;
@@ -133,6 +156,7 @@
     left: 0;
     z-index: 5;
 }
+
 .contact-submit-button-shield {
     position: absolute;
     top: 0;
@@ -141,6 +165,7 @@
     height: 70px;
     background: url(https://form2020.owocni.pl/img/shield.svg) no-repeat;
 }
+
 .contact-submit-button-shield:after {
     position: absolute;
     top: 22px;
@@ -151,23 +176,29 @@
     content: '';
     background-size: 100%;
 }
-.contact-form-btn:hover, .contact-form-btn.active {
+
+.contact-form-btn:hover,
+.contact-form-btn.active {
     bottom: 0;
 }
+
 /* =============optios============== */
 .opinion-box {
     margin-top: 85px;
 }
+
 .projects-empty-opinion-box {
     height: 120px;
 }
+
 .projects-client-opinion-p {
     font-family: "Arial";
     color: #e3e3e3;
     font-size: 30px;
     margin-bottom: 30px;
 }
- .copywriter-green-background {
+
+.copywriter-green-background {
     background-color: #438d07 !important;
     color: white !important;
 }
@@ -177,6 +208,7 @@
     width: 100%;
     margin-top: -1px;
 }
+
 .copywriter-standard-mt-80 {
     margin-top: 100px;
 }
@@ -185,6 +217,7 @@
     margin-top: 60px;
     margin-bottom: 60px;
 }
+
 .copywriter-ikony-subtheme {
     font-size: 36px;
     letter-spacing: -0.01em;
@@ -192,6 +225,7 @@
     font-family: "RobotoLight";
     max-width: 500px;
 }
+
 .copywriter-ikony-theme {
     font-size: 76px;
     letter-spacing: -0.01em;
@@ -200,29 +234,35 @@
     font-family: "RobotoLight";
     text-align: center;
 }
+
 .copywriter-standard-mt-80 {
     margin-top: 100px;
 }
+
 .copywriter-custom-img-text {
     letter-spacing: -0.01em;
     font-size: 99px;
     font-family: "RobotoLight";
     line-height: 99px;
 }
+
 .copywriter-custom-img-text-sm {
     letter-spacing: -0.01em;
     font-size: 36px;
     max-width: 500px;
 }
+
 .copywriter-bg-10 .copywriter-fotel {
     position: absolute;
     right: 0px;
     top: -250px;
 }
+
 .copywriter-standard-mt-40 {
     margin-top: 60px;
 }
-.copywriter-bg-10  {
+
+.copywriter-bg-10 {
     background: none;
     margin-top: 0px;
     height: 180px;
@@ -230,16 +270,19 @@
     margin: 0 auto;
     max-width: 1310px;
 }
+
 .copywriter-page .copywriter-bg-10 .copywriter-fotel-rwd {
     display: none;
     max-width: 100%;
     margin: 20px auto;
 }
+
 .copywriter-custom-text-akuku {
     font-family: "Georgia";
     font-size: 69px;
     line-height: 77px;
 }
+
 .copywriter-custom-subtext-akuku {
     font-family: "Georgia";
     font-style: italic;
@@ -250,6 +293,7 @@
 .copywriter-standard-mb-80 {
     margin-bottom: 100px;
 }
+
 .copywriter-page .new-mt-2 {
     margin-top: 20px;
 }
@@ -257,6 +301,7 @@
 .copywriter-standard-mt-m80 {
     margin-top: -80px;
 }
+
 .copywriter-custom-text-akuku-2 {
     font-family: "Georgia";
     font-size: 57px;
@@ -264,6 +309,7 @@
     text-align: right;
     padding-left: 40%;
 }
+
 .copywriter-custom-subtext-akuku-2 {
     font-family: "Georgia";
     font-style: italic;
@@ -273,9 +319,11 @@
     margin-bottom: 50px;
     padding-left: 30%;
 }
+
 .copywriter-custom-margin {
     margin-right: -30px;
 }
+
 .copywriter-bg-16 {
     background-image: url(https://cdn.owocni.pl/img/single-copywriter/Pisanie-tekstow-reklamowych.jpg);
     background-repeat: no-repeat;
@@ -285,9 +333,11 @@
     text-align: center;
     margin-bottom: 50px;
 }
+
 .copywriter-seo-img-dnone {
     display: none;
 }
+
 .copywriter-inside-img-text {
     padding-top: 400px;
     color: #373737;
@@ -298,6 +348,7 @@
     max-width: 570px;
     margin-inline: auto;
 }
+
 .copywriter-roboty-img-810 {
     display: none;
     margin-top: 50px;
@@ -306,6 +357,7 @@
 .copywriter-standard-mb-m100 {
     margin-bottom: -100px;
 }
+
 .copywriter-custom-text-turbokids-1 {
     color: #373737;
     text-align: right;
@@ -315,6 +367,7 @@
     line-height: 56px;
     margin-bottom: 30px;
 }
+
 .copywriter-custom-subtext-turbokids-1 {
     color: #373737;
     text-align: right;
@@ -323,24 +376,30 @@
     letter-spacing: -0.025em;
     line-height: 36px;
 }
+
 .pl-20 {
     padding-left: 20%;
 }
+
 .pr-20 {
     padding-right: 45%;
 }
+
 .copywriter-after-img-1 {
     position: relative;
     z-index: 1;
     margin-bottom: 283px;
     margin-top: 100px;
 }
+
 .copywriter-text-left {
     text-align: left;
 }
+
 .roboafter-rwd {
     display: none;
 }
+
 .copywriter-after-img-1:after {
     content: '';
     width: 596px;
@@ -365,17 +424,20 @@
     margin-top: 50px;
     margin-bottom: 100px;
 }
+
 .copywriter-custom-text-3 {
     font-size: 45px;
     line-height: 49px;
     letter-spacing: -0.01em;
     font-family: "Georgia";
 }
+
 .copywriter-after-img-2 {
     position: relative;
     z-index: 2;
     margin-bottom: 100px;
 }
+
 .copywriter-custom-text-4 {
     font-family: "Georgia";
     font-style: italic;
@@ -385,6 +447,7 @@
     letter-spacing: -0.01em;
     margin-bottom: 160px;
 }
+
 .copywriter-custom-subtext-4 {
     color: #373737;
     font-size: 30px;
@@ -393,6 +456,7 @@
     text-align: right;
     max-width: 315px;
 }
+
 .copywriter-after-img-2:after {
     content: '';
     width: 769px;
@@ -406,6 +470,7 @@
     background-position: left;
     z-index: -1;
 }
+
 .copywriter-custom-header-3 {
     font-family: "Georgia";
     font-size: 78px;
@@ -416,7 +481,8 @@
     max-width: 800px;
     margin-inline: auto;
 }
- .mako-big-img {
+
+.mako-big-img {
     background-image: url(https://cdn.owocni.pl/img/single-copywriter/seo-images/Pisanie-tekstow-reklamowych-MAKO.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -425,6 +491,7 @@
     text-align: center;
     margin-bottom: 200px;
 }
+
 /* =============Ink book============== */
 .copywriter-custom-header-4 {
     font-family: "Georgia";
@@ -437,6 +504,7 @@
     margin-inline: auto;
     margin-bottom: 50px;
 }
+
 .copywriter-custom-subheader-4 {
     font-family: "Georgia";
     font-size: 61px;
@@ -446,9 +514,11 @@
     margin-bottom: 50px;
     font-style: italic;
 }
+
 .copywriter-reading-container {
     max-width: 800px;
 }
+
 .copywriter-standard-pb-80 {
     padding-bottom: 100px;
 }
@@ -457,6 +527,7 @@
 .copywriter-ending-white-bg {
     background-color: white;
 }
+
 .thematic-bg-section img.white-bg {
     width: 100%;
     margin: 0 auto;
@@ -464,12 +535,15 @@
     left: 0;
     height: 70px;
 }
+
 .copywriter-ending-padding {
     padding-top: 100px !important;
 }
+
 .names-thematic-section-black {
     background-color: #000000;
 }
+
 .copywriter-ending-big {
     color: white;
     font-size: 188px;
@@ -479,6 +553,7 @@
     margin-inline: auto;
     max-width: 1000px;
 }
+
 .copywriter-ending-big-2 {
     color: white;
     font-size: 63px;
@@ -487,21 +562,26 @@
     margin-top: 70px;
     margin-bottom: 70px;
 }
+
 .copywriter-ending-white {
     color: white !important;
 }
+
 section.profit-sec {
     background: black;
     padding: 50px 0 100px;
 }
-.carousel-indicators [data-bs-target]{
+
+.carousel-indicators [data-bs-target] {
     height: 10px;
     width: 10px;
     border-radius: 100%;
 }
-.carousel-indicators{
-bottom: -70px;
+
+.carousel-indicators {
+    bottom: -70px;
 }
+
 .copywriter-ending-1 {
     font-size: 129px;
     font-family: 'Playfair Display', serif;
@@ -510,6 +590,7 @@ bottom: -70px;
     letter-spacing: -0.025em;
     color: white;
 }
+
 section.black-sec-form {
     background: black;
     padding: 100px 0;
@@ -519,9 +600,9 @@ section.black-sec-form {
 
 .accordion-item {
     margin-bottom: 5px;
-  }
-  
-  .accordion-title {
+}
+
+.accordion-title {
     padding: 15px 0px;
     cursor: pointer;
     background-color: transparent;
@@ -532,12 +613,12 @@ section.black-sec-form {
     font-weight: 500;
     border-bottom: 2px solid lightgray;
 }
-  
-  .accordion-title.active {
+
+.accordion-title.active {
     background-color: transparent;
-  }
-  
-  .accordion-content {
+}
+
+.accordion-content {
     padding: 20px 0;
     font-size: 14px;
     background: transparent;
@@ -545,11 +626,13 @@ section.black-sec-form {
     line-height: 25px;
     font-weight: 300;
 }
+
 .faqContainer {
     max-width: 700px;
     margin: 0 auto;
 }
-.faqContainer .accordion-item:before{
+
+.faqContainer .accordion-item:before {
     background-color: transparent;
 }
 
@@ -560,32 +643,41 @@ section.black-sec-form {
     padding: 40px;
     margin-inline: auto;
 }
+
 .inputLayout {
     display: flex;
     gap: 30px;
 }
+
 .inputLayout input {
     width: 30%;
     padding: 7px;
     border: 1px solid gray;
     margin-bottom: 30px;
 }
+
 .sendQuote textarea {
     width: 100%;
     margin-bottom: 20px;
-    padding: 10px 10px 0; 
+    padding: 10px 10px 0;
     resize: none;
 }
-.sendQuote textarea:active, .sendQuote textarea:focus, .inputLayout input:active, .inputLayout input:focus {
+
+.sendQuote textarea:active,
+.sendQuote textarea:focus,
+.inputLayout input:active,
+.inputLayout input:focus {
     outline: none;
-    border: 1.5px solid #438d07 ;
+    border: 1.5px solid #438d07;
 }
+
 .sendQuote h2 {
     font-family: 'Playfair Display', serif;
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 40px;
 }
+
 .quoteBtn button {
     padding: 10px 20px;
     border: navajowhite;
@@ -595,8 +687,32 @@ section.black-sec-form {
     box-shadow: 0px 4px 0 #295a01;
     border-radius: 10px;
 }
+
 .quoteBtn {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+/* -------modal--------- */
+.modalOverlay {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 999;
+}
+button.formModalCloseBtn {
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 35px;
+    position: absolute;
+    top: -13px;
+    right: 30px;
 }
