--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -193,7 +193,7 @@ section.sales_option_box {
 
 .opinion-box-content {
   padding: 50px 25px;
-  width: 55%;
+  width: 65%;
   background-color: white;
   float: right;
   margin: 50px 0px 50px 0px;
@@ -415,6 +415,8 @@ strong {
   line-height: 70px;
   font-weight: 900;
   margin-bottom: 25px;
+  max-width: 800px;
+  margin-inline: auto;
 }
 
 .copywriter-custom-container-2 {
@@ -427,9 +429,20 @@ strong {
 
 .copywriter-custom-header {
   font-family: "Playfair Display";
-  font-size: 72px;
+  font-size: 60px;
   letter-spacing: -0.01em;
   font-weight: 900;
+}
+.teeTitle {
+  font-size: 60px;
+}
+.teeDescription {
+  font-size: 24px;
+}
+.teePara {
+  font-size: 20px;
+  max-width: 600px;
+  margin-inline: auto;
 }
 
 .copywriter-custom-push-2 {
