--- a/src/components/organisms/zamow/zamow-hero/zamow-hero.css
+++ b/src/components/organisms/zamow/zamow-hero/zamow-hero.css
@@ -26,7 +26,7 @@
 
 .input-container {
   position: relative;
-  width: 80%;
+  width: 65%;
   margin: 0 auto;
   margin-top: 100px;
   margin-bottom: 100px;
@@ -90,9 +90,11 @@
 
 .progress-bar {
   height: 100%;
-  background: linear-gradient(90deg,
-      rgb(249, 146, 23) 0%,
-      rgb(249, 54, 0) 100%);
+  background: linear-gradient(
+    90deg,
+    rgb(249, 146, 23) 0%,
+    rgb(249, 54, 0) 100%
+  );
 }
 
 .back-button {
@@ -110,7 +112,7 @@
   .zamow-hero h1 {
     font-size: 40px;
     line-height: 50px;
-}
+  }
 
   .zamow-hero p {
     font-size: 24px;
@@ -123,5 +125,5 @@
   .zamow-hero-btn {
     position: static;
     margin: 20px 0 0;
-}
+  }
 }
