cennik screen : UI fixed

--- a/src/app/cennik/cennik.css
+++ b/src/app/cennik/cennik.css
@@ -1,11 +1,13 @@
 .heading-style {
-  font-size: 46px;
-  font-weight: 600;
+  font-size: 43px;
+  font-weight: 500;
 }
 
 .subheading {
   font-size: 20px;
   font-weight: 300;
+  max-width: 600px;
+  margin-inline: auto;
 }
 
 .card-heading {
@@ -46,6 +48,7 @@
   border: none;
   font-weight: 500;
   box-shadow: 0 6px 0px #981a04;
+  margin: 20px auto;
 }
 
 .cennikBtn:hover {
@@ -56,8 +59,10 @@
 /* additional input */
 .additional-input-container {
   display: flex;
-  margin: 20px;
-  padding: 20px;
+  margin: auto;
+  padding: 20px 20px 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .additional-input-container h2 {
@@ -74,20 +79,10 @@
   font-size: 18px;
   font-weight: 300;
   border-radius: 30px;
+  border: 1px solid lightgray;
 }
 
 .po_card_custom {
-  /* box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.15), 0 0 0 #ffffff,
-    2px 2px 2px #ffffff inset, -2px -2px 2px #c7c7c7 inset;
-  border-radius: 30px;
-  min-height: 400px;
-  padding: 30px;
-  background-color: rgba(247, 247, 247, 1);
-  width: 60%;
-  margin: 30px auto;
-  display: flex;
-  justify-content: center; */
-
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.15), 0 0 0 #ffffff,
     2px 2px 2px #ffffff inset, -2px -2px 2px #c7c7c7 inset;
   border-radius: 30px;
@@ -96,4 +91,59 @@
   width: 75%;
   width: 60%;
   margin: auto;
+}
+
+
+@media only screen and (max-width: 1024px) {
+  .BtnStyle {
+    width: 100%;
+    text-align: left;
+  }
+
+  .cennikFormCard {
+    width: 100% !important;
+  }
+
+  .btns_container {
+    padding: 10px 10px 10px 5px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .btns_container {
+    padding: 10px 10px 10px 5px;
+  }
+
+  .heading-style {
+    font-size: 30px;
+  }
+
+  .subheading {
+    font-size: 16px;
+  }
+
+  .form1Modal {
+    width: 100% !important;
+    inset: 0;
+    padding: 30px 20px !important;
+  }
+  .cennik-modal-content div{
+    display: block;
+  }
+  .cennik-modal-btn{
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 18px;
+  }
+  .cennik-modal-title{
+    font-size: 24px;
+  }
+  .cennik-modal-content p {
+    font-size: 16px;
+}
+.additional-input-container {
+  flex-direction: column;
+  gap: 15px;
+}
 }
