--- a/src/components/organisms/zamow/accordion/accordion.css
+++ b/src/components/organisms/zamow/accordion/accordion.css
@@ -44,10 +44,11 @@
 }
 @media only screen and (max-width:767px){
   .accordion-heading {
-    font-size: 40px;
+    font-size: 40px !important; 
 }
 .question h4 {
-  font-size: 20px;
+  font-size: 20px !important;
+  margin-bottom: 20px;
 }
 .question header {
   padding: 24px 0px;
@@ -55,4 +56,8 @@
 .question {
   padding: 0px 0px;
 }
+.info {
+  font-size:18px;
+}
+
 }
