--- a/src/components/organisms/zamow/zamow-hero/questions/questions.css
+++ b/src/components/organisms/zamow/zamow-hero/questions/questions.css
@@ -1,11 +1,11 @@
 .zh_question {
   padding: 70px 0;
-  width: 100%;
+  width: 60%;
   margin: 0 auto;
 }
 
 .zh_question h2 {
-  font-size: 40px;
+  font-size: 35px;
   font-weight: 400;
   text-align: left;
   margin-bottom: 40px;
@@ -38,7 +38,7 @@ textarea::-webkit-scrollbar {
   outline: none;
 }
 .zh_question textarea::placeholder {
-  color: #d22000b3; 
+  color: #d2200066; 
   font-style: italic;
 }
 .zh_question input:focus {
@@ -72,7 +72,7 @@ textarea::-webkit-scrollbar {
 
 }
 .question_container{
-  width: 100%;
+  width: 90%;
   padding-bottom: 60px !important;
 }
 .question_container p{
@@ -343,6 +343,15 @@ input[type="range"]::-webkit-slider-thumb::before {
 .input_description{
   font-size: 18px !important;
 }
+.working_container {
+  width: 100%;
+}
+.working_container textarea {
+  width: 60%;
+  text-align: left;
+  display: block;
+  margin-bottom: 20px;
+}
 /* --------------------------------question 11---------------------------- */
 .zh_marketing_container h2 span{
 font-weight: 700;
@@ -383,7 +392,7 @@ margin: 0 0 40px;
   font-weight: 300;
   text-align: left;
   line-height: 45px;
-  margin: 40px 0;
+  margin: 100px 0 40px;
 }
 button.zh_preview_btn {
   padding: 10px 20px;
@@ -393,6 +402,11 @@ button.zh_preview_btn {
   border: 2px solid #d21e00;
   background: transparent;
   font-weight: 500;
+}
+/* --------thank you!-------- */
+.zamow-hero .marketing_book {
+  width: 1100px;
+  margin: 0 auto 0 -150px;
 }
 @media only screen and (max-width: 1024px) {
   .checkBOxContainer {
@@ -408,12 +422,38 @@ button.zh_preview_btn {
   left: -10px;
   bottom: -10px;
 }
+.accordion-heading {
+  font-size: 50px !important;
+}
+.question h4 {
+  font-size: 30px !important;
+}
+.question header{
+  padding: 0 !important;
+}
+.zh_question, .working_container textarea{
+  width: 90%;
+}
+.question_14 {
+  padding: 70px 0 0;
+}
+.zamow-hero .marketing_book {
+  width: 90%;
+  margin: 0 auto 0;
+}
+.marketing_book h3{
+  font-size: 30px;
+}
+
 }
 
 
 @media only screen and (max-width: 767px) {
+  .zamow-hero.col{
+    max-width: 95%;
+  }
   .zh_question {
-    padding: 0px 20px;
+    padding: 0px 0px;
 }
 .zh_question textarea {
   font-size: 20px;
@@ -428,9 +468,7 @@ button.zh_preview_btn {
   margin-bottom: 30px;
 }
 .zh_next_btn_container {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-items: baseline;
 }
 .tri_arrow {
   display: none;
@@ -455,5 +493,14 @@ input[type="range"]{
 }
 .question_14 h2 {
   font-size: 50px;
+}
+.results-card{
+  min-height: 200px !important;
+}
+.results-card p{
+  font-size: 18px !important;
+}
+.marketing_book button.zh_preview_btn, .marketing_book .zh_next_btn {
+  font-size: 11px;
 }
 }
