--- a/src/components/organisms/tresci-sprzedazowe/tresci.css
+++ b/src/components/organisms/tresci-sprzedazowe/tresci.css
@@ -548,21 +548,26 @@ contact-inputs textarea {
 
 .copywriter-ending-big {
     color: white;
-    font-size: 188px;
-    line-height: 191px;
+    font-size: 60px;
+    line-height: 60px;
     font-weight: 600;
     font-family: 'Playfair Display', serif;
     margin-inline: auto;
-    max-width: 1000px;
+    max-width: 800px;
+    margin-top: 50px;
 }
 
 .copywriter-ending-big-2 {
     color: white;
-    font-size: 63px;
+    font-size: 45px;
     line-height: 71px;
-    font-family: 'Playfair Display';
+    /* font-family: 'Playfair Display', 'serif'; */
     margin-top: 70px;
     margin-bottom: 70px;
+    font-style: italic;
+    max-width: 800px;
+    margin-inline: auto;
+    font-weight: 400;
 }
 
 .copywriter-ending-white {
@@ -591,6 +596,7 @@ section.profit-sec {
     line-height: 123px;
     letter-spacing: -0.025em;
     color: white;
+    margin-bottom: 50px;
 }
 
 section.black-sec-form {
