--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -223,7 +223,7 @@ img.hardImg {
 
 .pinkBG {
   padding: 50px 0;
-  background-image: linear-gradient(173deg, #e3e3e3 53%, #fbb1b6);
+  background-image: linear-gradient(173deg, #f5f5f5 53%, #fbb1b6);
 }
 .socialVideo video{
   width: 800px !important;
