--- a/src/components/organisms/nazwa/Implementation-examples/examples.css
+++ b/src/components/organisms/nazwa/Implementation-examples/examples.css
@@ -126,7 +126,7 @@
   width: 415px;
   background: #f2c22f;
   border: transparent;
-  padding: 16px 3px;
+  padding: 15px 3px;
   color: black;
   font-weight: 500;
   font-size: 22px;
@@ -136,6 +136,7 @@
   display: inline;
   letter-spacing: -0.025em;
 }
+
 
 /* section */
 
@@ -257,7 +258,7 @@
 }
 
 .projects-opinion-1-new {
-  background-color: #e3e3e3;
+  
 }
 
 .projects-opinion-5 {
@@ -297,7 +298,7 @@
 /* 9 */
 .names-thematic-section-purple {
   background-color: #160209;
-  padding-bottom: 200px;
+  padding-bottom: 150px;
 }
 
 .pnazw-page .custom-cname-small-margin {
@@ -394,7 +395,7 @@
   content: "";
   position: absolute;
   bottom: -10px;
-  left: 40%;
+  left: calc(50% - 84px);
   width: 170px;
   border-bottom: 6px solid #aa2e2d;
 }
