--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -460,7 +460,7 @@
 
 .referenceCard {
   width: 90%;
-  margin: 0 auto;
+  margin: 0 auto 80px auto;
 }
 .referenceCard .cardTop {
   display: flex;
@@ -561,4 +561,9 @@
   align-items: center;
   gap: 50px;
   margin: 50px;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
 }
