--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -567,3 +567,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+.showAllbtn {
+  font-size: 22px;
+  font-weight: 600;
+  cursor: pointer;
+}
