--- a/src/components/organisms/opinie/happy-customers/happyCustomers.css
+++ b/src/components/organisms/opinie/happy-customers/happyCustomers.css
@@ -19,7 +19,7 @@
 
 .single_review_card {
   padding: 16px 16px;
-  border: 1px solid gray;
+  border: 1px solid #e9e9e9;
   border-radius: 12px;
   font-size: 22px;
   width: fit-content;
