--- a/src/components/organisms/logo/logo-footer/logo-footer.css
+++ b/src/components/organisms/logo/logo-footer/logo-footer.css
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    
+    background: #f5f5f5;
     display: flex;
     justify-content: space-around;
     align-items: center;
