--- a/src/components/organisms/opinie/happy-customers/happyCustomers.css
+++ b/src/components/organisms/opinie/happy-customers/happyCustomers.css
@@ -8,13 +8,16 @@
   margin-bottom: 0px;
   /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); */
   box-shadow: 0px -8px 16px -12px rgba(0, 0, 0, 0.2);
+  margin-top: -250px;
+  position: relative;
+  z-index: 11;
 }
 
 .customer_replies_container h1 {
   margin-bottom: 40px;
   font-weight: 700;
   list-style: 1.2;
-  font-size: 42px;
+  font-size: 52px;
 }
 
 .single_review_card {
@@ -26,4 +29,46 @@
   display: inline-block;
   margin: 8px;
   font-weight: 600;
+}
+.accordion-container {
+  margin: 0 auto;
+  max-width: 70%;
+}
+
+@media only screen and (max-width:1024px) {
+  .customer_replies_container {
+    margin-top: 0;
+    width: 100%;
+  }
+
+  .review_container {
+    width: 100%;
+    padding: 0 50px;
+  }
+
+  .review {
+    padding: 50px 0;
+  }
+  .accordion-container {
+    max-width: 100%;
+  }
+
+ 
+}
+@media only screen and (max-width:767px) {
+  .customer_replies_container h1 {
+    font-size: 35px;
+}
+.review_container {
+  flex-direction: column;
+}
+.single_review_card {
+  padding: 10px;
+  font-size: 18px;
+}
+.question h4 {
+  font-size: 22px;
+  font-weight: 400;
+}
+ 
 }
