--- a/src/components/organisms/opinie/brilliant-job/reviewCard.css
+++ b/src/components/organisms/opinie/brilliant-job/reviewCard.css
@@ -3,7 +3,7 @@
   width: 60rem;
   margin: 0 auto;
   gap: 50px;
-  background-color: #f5f5f5;
+  background-color: white;
 }
 
 .rc_rating_container {
