--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -12,7 +12,7 @@
 }
 
 .opinionContent h1 {
-  font-size: 80px;
+  font-size: 60px;
   font-weight: 700;
   color: white;
 }
@@ -145,7 +145,9 @@
   font-weight: 800;
   margin: 0 0 40px;
   line-height: 80px;
-  color: #3e3e3e;
+  color: #000;
+  max-width: 500px;
+  padding-left: 30px;
 }
 
 .teamsTopContent img {
@@ -261,7 +263,7 @@
 
 .face {
   position: absolute;
-  left: 100px;
+  left: 50px;
   top: -68px;
   z-index: 1;
 }
@@ -285,7 +287,7 @@
 }
 
 .ratingBlackCard h6 {
-  font-size: 26px;
+  font-size: 20px;
   color: #fbbe01;
   margin: 50px 0 25px;
 }
@@ -294,6 +296,20 @@
   font-size: 28px;
   color: #ffffffc9;
   font-weight: 300;
+}
+
+.ratingCardContent {
+  position: relative;
+}
+
+.ratingCardContent::before {
+  content: "";
+  position: absolute;
+  left: -30px;
+  top: 0;
+  height: 100%;
+  width: 3px;
+  background: white;
 }
 
 .topBtn {
@@ -325,6 +341,14 @@
 /* ================google review==================================== */
 .google {
   background: white;
+}
+
+.googleReviewBanner img {
+  margin-inline: auto;
+  display: block;
+  width: 50%;
+  height: auto;
+  margin-block: 50px;
 }
 
 .google h2 {
@@ -371,22 +395,29 @@
   display: inline-block;
   color: #5f5f5f;
 }
+
 .hoverMenu {
   display: none;
   position: absolute;
   width: 600px;
   z-index: 1;
   color: #5f5f5f;
+  background: white;
+  padding: 10px;
 }
+
 .hoverMenu a {
   color: black;
   text-decoration: none;
   display: block;
   color: #5f5f5f;
+  font-size: 20px;
 }
+
 .hoverMenu a:hover {
   color: #ffca14;
 }
+
 .googleHover:hover .hoverMenu {
   display: block;
 }
@@ -405,18 +436,22 @@
   gap: 15px;
   align-items: center;
 }
+
 .googleCard .profile h6 {
   font-size: 15px;
   margin: 0;
 }
+
 .googleCard .profile p {
   font-size: 14px;
   margin: 0;
 }
+
 .googleCard .comment p {
   font-size: 16px;
   margin: 15px 0 20px;
 }
+
 .googleCard .comment button {
   font-size: 16px;
   border: none;
@@ -424,12 +459,14 @@
   font-weight: 500;
   background: white;
 }
+
 /* ====================reference===================== */
 .opinionContent h3 {
   font-size: 32px;
   font-weight: 700;
   color: #fbbe01;
 }
+
 .opinionContent h4 {
   font-size: 35px;
   font-weight: 700;
@@ -437,23 +474,28 @@
   line-height: 55px;
   padding: 0 0 50px;
 }
+
 .opinionContent h4 span {
   background: #fbbe01;
   font-weight: 800;
   padding: 0 10px;
   border-radius: 20px;
 }
+
 .tesco {
   padding: 40px 0;
 }
+
 .tesco h4 {
   text-align: center;
   font-size: 30px;
 }
+
 .tesco p {
   text-align: center;
   font-size: 18px;
 }
+
 .tesco img {
   width: 85%;
   margin: 0 auto 20px;
@@ -464,21 +506,26 @@
   width: 90%;
   margin: 0 auto 80px auto;
 }
+
 .referenceCard .cardTop {
   display: flex;
   align-items: center;
   gap: 10px;
 }
+
 .referenceCard .cardTop h6 {
   font-size: 15px;
   margin: 0;
 }
+
 .referenceCard .cardTop p {
   font-size: 13px;
 }
+
 .referenceCard p {
   font-size: 16px;
 }
+
 .referenceCard p span {
   background: #fbbe01;
   padding: 0 10px;
@@ -486,60 +533,71 @@
   display: block;
   font-weight: 600;
 }
+
 .referenceCardSec {
   margin: 40px 0 0;
   padding: 0 0 40px;
 }
+
 /* ======================personally===================== */
 .Personally {
   background: white;
   padding: 50px 0;
   position: relative;
 }
+
 .personallyContainer {
   max-width: 1200px;
   margin: 0 auto;
 }
+
 .personallyCard {
   width: 100%;
   background-color: black;
   border-radius: 30px;
   padding: 50px;
 }
+
 .personallyCard h2 {
   font-size: 65px;
   font-weight: 800;
   color: white;
   margin: 0 0 50px;
 }
+
 .personallyCard p {
   font-size: 28px;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.608);
   margin: 0 0 50px;
 }
+
 .personallyCard .contact h4 {
   font-size: 28px;
   font-weight: 700;
   color: white;
 }
+
 .personallyCard .contact p {
   font-size: 25px;
   font-weight: 500;
   color: white;
   margin: 0 0 10px;
 }
+
 .personallyCard .contact a {
   font-size: 30px;
   font-weight: 600;
   color: #fbbe01;
 }
+
 .personallMan {
   position: absolute;
   width: 400px;
   z-index: 1;
   left: 0;
 }
+
 .personallHand {
   position: absolute;
   width: 400px;
@@ -547,17 +605,20 @@
   z-index: 0;
   left: 0;
 }
+
 /* ==========================expert=============================== */
 .expert {
   background-image: linear-gradient(180deg, #fcfcfc 53%, #e3e3e3);
   padding: 100px 0;
 }
+
 .expertContent h2 {
   font-size: 50px;
   font-weight: 300;
   color: #3e3e3e;
   text-align: center;
 }
+
 .expertLogo {
   display: flex;
   align-items: center;
@@ -574,4 +635,267 @@
   font-size: 22px;
   font-weight: 600;
   cursor: pointer;
+  display: flex;
+  gap: 20px;
+}
+
+.googlePlay {
+  width: 35px;
+  height: 35px;
+  background: #fbbe01;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+}
+
+.googlePlay img {
+  width: 20px;
+}
+
+.mt95 {
+  margin-top: -95px;
+}
+
+.opinionBanner img {
+  width: 90%;
+  height: 80%;
+}
+img.opinionBnnaerImg {
+  margin-top: 0px;
+}
+/* ------------------------------media screen ------------------------------- */
+@media only screen and (max-width:1024px) {
+  .opinionContent h1 {
+    font-size: 50px;
+  }
+
+  .customer_replies_container {
+    margin-top: 0;
+    width: 100%;
+  }
+
+  .job {
+    max-width: 90%;
+  }
+
+  .job {
+    max-width: 90%;
+  }
+
+  .opinionContainer {
+    max-width: 90%;
+  }
+
+  .teamsTopContent h2 {
+    margin-bottom: 300px;
+    max-width: 90%;
+  }
+
+  .maleImg {
+    max-width: 70%;
+    margin-top: 70px;
+  }
+
+  .femaleImg {
+    width: 250px;
+    top: auto;
+    bottom: 0;
+  }
+
+  .teamLeftContent {
+    margin: 20px 0 0 0px;
+    text-align: center;
+  }
+
+  .teamsCardContent {
+    padding: 0 0 0 180px;
+  }
+
+  .animatedCar {
+    width: 250px !important;
+    margin: -200px 0 0 -80px !important;
+  }
+
+  .ratingBlackCard p {
+    font-size: 25px;
+  }
+
+  .rating {
+    background: white;
+    position: relative;
+    padding: 0 0 50px;
+  }
+
+  .google h2 {
+    font-size: 50px;
+  }
+
+  .opinionContent h4 {
+    line-height: 45px;
+  }
+
+  .personallMan {
+    position: absolute;
+    width: 400px;
+    z-index: 1;
+    left: 0;
+    display: none;
+  }
+
+  .personallHand {
+    width: 400px;
+    bottom: 0px;
+    left: auto;
+    right: 0;
+  }
+
+  .expertLogo {
+    width: 100%;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .expertLogo img {
+    margin-inline: auto;
+    display: block;
+  }
+}
+
+@media only screen and (max-width:767px) {
+  .opinionBanner img {
+    width: 70%;
+    margin-inline: auto;
+    display: block;
+    margin-top: 20px;
+  }
+
+  .opinionContent h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .teamsTopContent h2 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  .teamsTopContent img {
+    bottom: -48px;
+    width: 60%;
+  }
+
+  .teamsTopContent h2 {
+    margin-bottom: 160px;
+    max-width: 90%;
+  }
+
+  .teamsCard {
+    padding: 20px;
+  }
+
+  .teamLeftContent {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .teamsCardContent {
+    padding: 0 0 0 0px;
+    margin-bottom: 300px;
+  }
+
+  .teamsCardContent p {
+    font-size: 22px;
+    line-height: 30px;
+    margin: 0 0 50px;
+    padding: 0 0px 0 0;
+  }
+
+  .femaleImg {
+    width: 200px;
+  }
+
+  .animatedCar {
+    width: 200px !important;
+    margin: -200px 0 0 80px !important;
+  }
+
+  .brands h2 {
+    font-size: 40px;
+  }
+
+  .face {
+    left: 50px;
+    top: 47px;
+    width: 50%;
+  }
+
+  .brandSlide {
+    margin: 0 0 100px;
+  }
+
+  .ratingCardConten::before {
+    display: none;
+  }
+
+  .ratingBlackCard {
+    padding: 20px;
+  }
+
+  .ratingBlackCard p {
+    font-size: 22px;
+  }
+
+  .accordion {
+    padding: 20px 0 50px;
+  }
+
+  .google h2 {
+    font-size: 30px;
+  }
+  .googleMenu ul li {
+    font-size: 22px;
+    font-weight: 600;
+}
+.googleMenu ul li .playBG img {
+  width: 60%;
+}
+.hoverMenu {
+  width: 100%;
+  padding: 10px;
+  white-space: nowrap;
+}
+.mt95 {
+  margin-top: 0px;
+}
+.brand_Slide_ButtonNext {
+padding-right: 0;
+}
+.showAllbtn {
+  justify-content: flex-end;
+}
+.personallyCard {
+  padding: 30px;
+}
+.personallyCard p {
+  font-size: 22px;
+}
+.personallyCard h2 {
+  font-size: 40px;
+}
+.personallHand {
+  width: 250px;
+}
+.contact {
+  margin-bottom: 150px;
+}
+.expertLogo {
+  margin: 0px;
+}
+.expertContent h2 {
+  font-size: 40px;
+  font-weight: 300;
+  color: #3e3e3e;
+  text-align: center;
+}
 }
